2009-05-01  Florent Lamiraux  <florent@laas.fr>

	Remove automatically generated files.
	* depcomp: Remove.
	* missing: Remove.

hpp-corbaserver 1.7.3 released April 20, 2009

	61. Added missing #include <iostream>
	
hpp-corbaserver 1.7.2 released April 17, 2009

	60. Adaptation to modifications in kwsPlus.
	
hpp-corbaserver 1.7.1 released April 8, 2009

	59. Call function not specific to HRP2 when constructing another robot
	
hpp-corbaserver 1.7 released March 14, 2009

	58. Update documentation build and install
	
hpp-corbaserver 1.6.1 released March 12, 2009

	57. Update default path to HRP2 VRML file to OpenHRP-3 location.
	
hpp-corbaserver 1.6 released Dec  9, 2008

	56. Added optional robot model path to loadHrp2Model(). 
	55. Added requests to set and get dynamic penetration.
	54. Specify penetration when inserting a new robot in ChppPlanner
	    object.
	53. Added method to get length of path and corrected prototype of
	    configAtDistance.
	52. Test size of config in ChppciProblem_impl::setInitialConfig and
	    setGoalConfig.
	51. Added interface function to insert a configuration extractor.

hpp-corbaserver 1.5 released Sep 10, 2008

	50. Test index of vertices in ChppciRobot::addTriangle and
	    ChppciObstacle::addTriangle
	49. Changed non negative parameters from short to unsigned short in idl.
	48. Added request hppciRobot::setDofBounds.
	47. Added a request to interrupt motion planning process in ChppciProblem.

hpp-corbaserver 1.4 released June 12, 2008

	46. In ChppciProblem::setDistanceFunction, distance function is passed to
	    device, roadmap builder if any and path optimizer if any.

	45. Added request ChppciObstacle::loadModelLoaderObstacle to load
	obstacle through modelloader.

	44. Slight modifications in ChppciProblem::setPathOptimizer.

	43. Added CORBA request to select diffusion from start or goal of both.

	42. Added CORBA request to set diffusion shooter of a given problem.
