@@ -57,59 +57,63 @@ public:
 
   /** 
       \brief Initialize Orb and load model of HRP2 by sending a Corba request modelLoader to OpenHRP. 
-
-      \deprecated This function is deprecated. Call loadHrp2Model(double inPenetration) instead.
-
-      This function gets the model of HRP2 from a CORBA request and initializes a ChppProblem 
-      with this robot by calling ChppPlanner::addHppProblem(CkppDeviceComponentShPtr robot).
-      Note that the robot is set into half-sitting configuration.
-  */
-  ktStatus loadHrp2Model(const char *model = NULL) __attribute__ ((deprecated));
-
-  /** 
-      \brief Initialize Orb and load model of HRP2 by sending a Corba request modelLoader to OpenHRP. 
-
+      
       \param inPenetration Dynamic penetration allowed for validating direct paths of the robot.
+      \param inModel optional path to the file describing the robot.
 
       This function gets the model of HRP2 from a CORBA request and initializes a ChppProblem 
       with this robot by calling ChppPlanner::addHppProblem(CkppDeviceComponentShPtr robot).
       Note that the robot is set into half-sitting configuration.
   */
-  ktStatus loadHrp2Model(double inPenetration, const char *model = NULL);
+  ktStatus loadHrp2Model(double inPenetration, const std::string& inModel = 
+			 std::string("@OPENHRP_PREFIX@/Controller/IOserver/robot/HRP2JRL/model/HRP2JRLmain.wrl"));
 
   /**
      \brief  Initialize Orb and load model of HRP2 by sending a Corba request modelLoader to OpenHRP.
+
+     \param inModel optional path to the file describing the robot.
+
      \retval outDevice The model of HRP2 set in half-sitting position.
 
       Note that the robot is set into half-sitting configuration.
   */
-  ktStatus loadHrp2Model(ChppHumanoidRobotShPtr &outDevice, const char *model = NULL);
+  ktStatus loadHrp2Model(ChppHumanoidRobotShPtr &outDevice, 
+			 const std::string& inModel = 
+			 std::string("@OPENHRP_PREFIX@/Controller/IOserver/robot/HRP2JRL/model/HRP2JRLmain.wrl"));
 
   /**
      \brief  Initialize Orb and load model of a robot by sending a Corba request modelLoader to OpenHRP.
      \param inFilename Name of the wrl file containing the description of the robot.
      \param inDeviceName Name of the device
-     \param inOpenHrpPrefix Prefix of OpenHRP installation. Default value is provided by hppOpenHRP package.
+     \param inDirectory Prefix of OpenHRP installation. Default value is provided by hppOpenHRP package.
      \retval outDevice The model of robot.
 
-     \note The model of the robot is downloaded from "file://"+inOpenHrpPrefix+"/etc/"+inFileName
+     \note The model of the robot is downloaded from "file://"inDirectory/inFileName".
+     \warning the way the arguments are handled has changed: "etc/" is not anymore inserted in the model path.
 
   */
-  ktStatus loadRobotModel(std::string inFilename, std::string inDeviceName, ChppDeviceShPtr &outDevice, 
-			  std::string inOpenHrpPrefix=std::string("@OPENHRP_PREFIX@"));
+  ktStatus loadRobotModel(const std::string& inFilename, 
+			  const std::string& inDeviceName, 
+			  ChppDeviceShPtr& outDevice, 
+			  const std::string& inDirectory=
+			  std::string("@OPENHRP_PREFIX@")+std::string("/etc"));
 
   /** 
       \brief Initialize Orb and load model of objects by sending a Corba request modelLoader to OpenHRP. 
       \param inFilename Name of the wrl file containing the description of the obstacle.
       \param inObstacleName Name of the obstacle.
-      \param inOpenHrpPrefix Prefix of OpenHRP installation. Default value is provided by hppOpenHRP package.
+      \param inDirectory Prefix of OpenHRP installation. Default value is provided by hppOpenHRP package.
       \retval outPolyhedron shared pointer to the polyhedron.
 
-     \note The model of the obstacle is downloaded from "file://"+inOpenHrpPrefix+"/etc/"+inFileName
+      \note The model of the obstacle is downloaded from "file://"inDirectory/inFileName"
+      \warning the way the arguments are handled has changed: "etc/" is not anymore inserted in the model path.
 
   */
-  ktStatus loadObstacleModel(std::string inFilename, std::string inObstacleName, CkppKCDPolyhedronShPtr& outPolyhedron,
-			     std::string inOpenHrpPrefix=std::string("@OPENHRP_PREFIX@"));
+  ktStatus loadObstacleModel(const std::string& inFilename, 
+			     const std::string& inObstacleName, 
+			     CkppKCDPolyhedronShPtr& outPolyhedron,
+			     const std::string& inDirectory=
+			     std::string("@OPENHRP_PREFIX@")+std::string("/etc/"));
  
   /** 
       \brief Build a KineoWorks device from HRP2 model stored in Corba. 
@@ -128,13 +132,15 @@ private :
 
   /**
      \brief Get URL of robot for loadRobotModel function.
+
+     \param inModel Path to the model of HRP2 robot.
   */
-  ktStatus getRobotURL(const char *model = NULL);
+  ktStatus getRobotURL(const std::string& inModel);
 
   /**
      \brief Get URL of obstacle for loadObstacleModel function.
   */
-  ktStatus getObstacleURL(std::string inFilename);
+  ktStatus getObstacleURL(const std::string& inFilename);
 
   /** 
       \brief Pointer to Path Planner object allocated elsewhere.
